# mindmapconverter

./: .gitignore  INDEX.md  LICENSE  README.md  SECURITY.md  mindmapconverter.py  pyproject.toml  test_additional_edge_cases.py  test_edge_cases.py  test_mindmapconverter.py
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
