[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindmapconverter"
version = "0.1.1"
description = "A tool to convert between Freemind/Freeplane and PlantUML mindmaps."
readme = "README.md"
authors = [
  { name = "Bosse", email = "bosse@klykken.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["mindmap", "converter", "freemind", "freeplane", "plantuml"]
dependencies = []
requires-python = ">=3.6"

[project.urls]
"Homepage" = "https://github.com/larkly/mindmapconverter"
"Bug Tracker" = "https://github.com/larkly/mindmapconverter/issues"

[project.scripts]
mindmapconverter = "mindmapconverter:main"

[tool.setuptools]
py-modules = ["mindmapconverter"]
